Se habilita la actualizacion para que salga el mensaje en el growl cuando se crea el usuario. Se deba habilitar la validacion cuando ya existe el correo registrado.

--- a/web/Front/Signup.xhtml
+++ b/web/Front/Signup.xhtml
@@ -417,7 +417,7 @@
 
                                         </div>
                                         <div class="mj_pricing_footer">
-                                            <p:commandLink id="registroE"   actionListener="#{loginBean.registrarEmpleado()}" oncomplete="clicCloseButton2()">
+                                            <p:commandLink id="registroE"   actionListener="#{loginBean.registrarEmpleado()}" oncomplete="clicCloseButton2()" update="formSignUpEmpleado">
                                                 <h:outputText value="Iniciar Ya!" />
                                             </p:commandLink>                                                        
                                         </div>
