--- a/web/Front/Signup.xhtml
+++ b/web/Front/Signup.xhtml
@@ -226,7 +226,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel1"> Cuenta Trabjador</h4>
+                        <h4 class="modal-title" id="myModalLabel1"> Cuenta Trabajador</h4>
                         <p>a continuacion ingresa tus datos para abrir una cuenta y empezar a trabjar en esta ciudad llena de oportunidades </p>
                     </div>
                     <div class="modal-body">
@@ -417,7 +417,7 @@
 
                                         </div>
                                         <div class="mj_pricing_footer">
-                                            <p:commandLink id="registroE"   actionListener="#{loginBean.registrarEmpleado()}" oncomplete="clicCloseButton2()" update="formSignUpEmpleado">
+                                            <p:commandLink id="registroE"   actionListener="#{loginBean.registrarEmpleado}"  update="formSignUpEmpleado">
                                                 <h:outputText value="Iniciar Ya!" />
                                             </p:commandLink>                                                        
                                         </div>
