Se cambia en el template logueado la forma que se llama los javascript.

--- a/web/Front/Signup.xhtml
+++ b/web/Front/Signup.xhtml
@@ -496,7 +496,7 @@
         </div>
         <script type="text/javascript">
             $(document).ready(function () {
-                alert('hola');
+                //alert('hola');
                 //Limpiar value Documento Identidad Cliente
                 document.getElementById("formSignUpClient:ur_DI").value = "";
                 document.getElementById("formSignUpClient:ur_em2").style.display = "none";
