Se soluciona lo de la salida del popup quitando los conflictos y agregando los estilos.

--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -15,6 +15,7 @@
         <meta name="author" content=""></meta>
         <meta name="MobileOptimized" content="320"></meta>
         <link href="../css/main.css" rel="stylesheet" type="text/css" />
+        <h:outputStylesheet library="default" name="css/jquery.datetimepicker.css"  />
         <ui:insert name="head"></ui:insert>
         <link rel="shortcut icon" type="image/png" href="../images/favicon.png" />
     </h:head>
@@ -206,6 +207,7 @@
         <h:outputScript library="default" name="js/plugins/bootstrap-slider/bootstrap-slider.js"  />  
         <h:outputScript library="default" name="js/plugins/fancybox/jquery.fancybox.js"  />  
         <h:outputScript library="default" name="js/plugins/fancybox/jquery.fancybox.pack.js"  />  
+        
         <h:outputScript library="default" name="js/jquery.mixitup.js"  />  
         <h:outputScript library="default" name="js/plugins/isotop/isotope.pkgd.js"  />  
         <h:outputScript library="default" name="js/plugins/ckeditor/ckeditor.js"  />  
@@ -213,7 +215,7 @@
         <h:outputScript library="default" name="js/plugins/ckeditor/adapters/jquery.js"  /> 
         <h:outputScript library="default" name="js/plugins/fileupload/js/jquery.iframe-transport.js"  />
         <h:outputScript library="default" name="js/plugins/fileupload/js/jquery.fileupload.js"  /> 
-
+        <h:outputScript library="default" name="js/plugins/datetimepicker/build/jquery.datetimepicker.full.js"  /> 
         <!--<script src="/Metropolis2/js/plugins/ckeditor/adapters/jquery.js"></script>-->
         <h:outputScript library="default" name="js/custom.js"  /> 
 
