--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -252,6 +252,7 @@
         <h:outputScript library="default" name="js/plugins/bootstrap-slider/bootstrap-slider.js"  />  
         <h:outputScript library="default" name="js/plugins/fancybox/jquery.fancybox.js"  />  
         <h:outputScript library="default" name="js/plugins/fancybox/jquery.fancybox.pack.js"  />  
+        
         <h:outputScript library="default" name="js/jquery.mixitup.js"  />  
         <h:outputScript library="default" name="js/plugins/isotop/isotope.pkgd.js"  />  
         <h:outputScript library="default" name="js/plugins/ckeditor/ckeditor.js"  />  
@@ -259,7 +260,7 @@
         <h:outputScript library="default" name="js/plugins/ckeditor/adapters/jquery.js"  /> 
         <h:outputScript library="default" name="js/plugins/fileupload/js/jquery.iframe-transport.js"  />
         <h:outputScript library="default" name="js/plugins/fileupload/js/jquery.fileupload.js"  /> 
-
+        <h:outputScript library="default" name="js/plugins/datetimepicker/build/jquery.datetimepicker.full.js"  /> 
         <!--<script src="/Metropolis2/js/plugins/ckeditor/adapters/jquery.js"></script>-->
         <h:outputScript library="default" name="js/custom.js"  /> 
 
