Cambié index quité ingles

--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -587,9 +587,9 @@
                         <div class="mj_tabs mj_bottompadder50">
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs mj_joblist" role="tablist">
-                                <li role="presentation" class="active"><a href="#recentjobs" aria-controls="recentjobs" role="tab" data-toggle="tab">Recent Jobs</a>
+                                <li role="presentation" class="active"><a href="#recentjobs" aria-controls="recentjobs" role="tab" data-toggle="tab">Trabajos recientes</a>
                                 </li>
-                                <li role="presentation"><a href="#featuredjobs" aria-controls="featuredjobs" role="tab" data-toggle="tab">Featured Jobs</a>
+                                <li role="presentation"><a href="#featuredjobs" aria-controls="featuredjobs" role="tab" data-toggle="tab">Trabajos destacados</a>
                                 </li>
                             </ul>
                             <!-- Tab panes -->
