Se realiza ajuste a la pagina de administrar trabajos y se ajusta el loginBean para que siempre que se genere un logueo se quede en la misma pagina desde donde se esta llamando el logueo.

--- a/web/Front/administrarTrabajos2.xhtml
+++ b/web/Front/administrarTrabajos2.xhtml
@@ -499,6 +499,23 @@
                 </h:panelGrid>
             </p:dialog>
         </h:form>
+           <script type="text/javascript">
+            $(document).ready(function () {
+                if (#{loginBean.esRol("Empleado")} || #{loginBean.esRol("Administrador")}) {
+                    var rolEmpleado = "block";
+                } else {
+                    var rolEmpleado = "none";
+                }
+                if (#{loginBean.esRol("Usuario")} || #{loginBean.esRol("Administrador")}) {
+                    var rolUsuario = "block";
+                } else {
+                    var rolUsuario = "none";
+                }
+                document.getElementById("divPerfilEmpleado").style = "display: " + rolEmpleado;
+                document.getElementById("divPerfilUsuario").style = "display: " + rolUsuario;
+            });
+        </script>
+
     </ui:define>
 
 </ui:composition>
