Se ajusta el metodo de logout ya quedo redireccionando a el index.

--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -108,7 +108,7 @@
                                         </li>
                                         <li>
                                             <p:commandLink value="Cerrar Sesión" 
-                                                           actionListener="#{loginBean.logout()}"
+                                                           action="#{loginBean.logout()}"
                                                            oncomplete="handleLogoutRequest(xhr, status, args)" />
                                         </li>
 
