--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -81,7 +81,7 @@
                             <ul class="nav navbar-nav navbar-right mj_right_menu mj_withoutlogin_menu">
                                 <li class="mj_searchbtn"><a href="#"><i class="fa fa-search"></i></a>
                                     <div class="mj_search_option">
-                                        <form>
+                                        <h:form>
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <div class="input-group-addon"><i class="fa fa-search"></i>
@@ -94,7 +94,7 @@
                                                     </p:autoComplete> 
                                                 </div>
                                             </div>
-                                        </form>
+                                        </h:form>
                                     </div>
                                 </li>
                                 <li>                                   
