Arreglo error en OfertaDaoImplement línea 45... rollback con session nula Links rotos resueltos (ofertar y como trabajar)

--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -55,7 +55,7 @@
                                 <li class="active"><a href="index.xhtml">INICIO</a>
                                 </li>
                                 <li><a href="Trabajador.xhtml">BUSCAR TRABAJO</a></li>
-                                <li><a href="post_job.html">OFERTAR</a>
+                                <li><a href="Ofertar.xhtml">OFERTAR</a>
                                 </li>
                                 <li><a href="#">COMO FUNCIONA</a>
                                     <ul class="sub_menu">
@@ -65,7 +65,7 @@
                                         </li>
                                         <li><a href="#">COMO FUNCIONA PAGOS</a>
                                         </li>
-                                        <li><a href="Como_Contratar.html">COMO CONTRATAR</a>
+                                        <li><a href="Como_Contratar.xhtml">COMO CONTRATAR</a>
                                         </li>
                                         <li><a href="#">COMO TERMINAR TRABAJO</a>
                                         </li>                                        
