Fotos por defecto si no tiene Llamado a m[etodo en loginbean que envia al index sino esta logeado para paginas de logeado.

--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -95,7 +95,7 @@
                                     <p:outputLabel value="#{loginBean.usuarioLog.nombres} #{loginBean.usuarioLog.apellidos}" />
                                 </li>
                                 <li>
-                                    <a class="mj_profileimg"> <h:graphicImage value="/images/#{loginBean.usuarioLog.foto}" alt="user" height="50" width="50" />
+                                    <a class="mj_profileimg"> <h:graphicImage value="/images/accountIcon.png" alt="user" height="50" width="50" />
                                         <i class="fa fa-angle-down"></i></a>
                                 </li>
                             </ul>
