--- a/web/Front/modificarPerfil.xhtml
+++ b/web/Front/modificarPerfil.xhtml
@@ -10,6 +10,7 @@
 
 
     <ui:define name="contenido">
+        <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
         <div class="mj_pagetitle2 mj_bottompadder80">
             
             <div class="mj_pagetitle_inner">
