--- a/web/Front/Cotizar.xhtml
+++ b/web/Front/Cotizar.xhtml
@@ -7,7 +7,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-  
+  <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
 
     <ui:define name="contenido">
         <div class="mj_lightgraytbg mj_resumepreview mj_toppadder80 mj_bottompadder80">
