--- a/web/Front/Detalle_Trabajador.xhtml
+++ b/web/Front/Detalle_Trabajador.xhtml
@@ -7,6 +7,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    
     <ui:define name="contenido">
         <div class="mj_pagetitle2">
             <div class="mj_pagetitleimg">
@@ -21,7 +22,7 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                                         <div class="mj_joblogo">
-                                            <p:graphicImage value="#{ofertaBean.ofertaSelected.usuario.foto}" ></p:graphicImage>
+                                            <p:graphicImage value="#{ofertaBean.ofertaSelected.usuario.foto== null or ofertaBean.ofertaSelected.usuario.foto.equals('') ? '/images/no-profile-photo.jpg':ofertaBean.ofertaSelected.usuario.foto}" ></p:graphicImage>
                                         </div>
                                     </div>
                                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
