--- a/web/Front/Ofertar.xhtml
+++ b/web/Front/Ofertar.xhtml
@@ -10,6 +10,7 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="contenido">
 
+        <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
