--- a/web/Front/Payu_landing.xhtml
+++ b/web/Front/Payu_landing.xhtml
@@ -7,6 +7,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="contenido">
+        <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
         <f:event type="preRenderView" listener="#{pagosBean.cargarDatos()}" />
 
         <div class="mj_mainheading mj_toppadder80">
