--- a/web/Front/Resumendepagos.xhtml
+++ b/web/Front/Resumendepagos.xhtml
@@ -7,6 +7,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="contenido">
+        <f:event type="preRenderView" listener="#{loginBean.Autorizar()}"></f:event>
         <div class="mj_lightgraytbg mj_resumepreview mj_toppadder80 mj_bottompadder80">
             <div class="container">
                 <div class="row">
